# Codex-Test

./: .gitignore  MASTER_PLAN.md  README.md  Sorting_Clasificacion_de_GIM.ipynb  pyproject.toml
.github/workflows/: build-apk.yml  ci.yml  deploy-pages.yml
_legacy/risksim/: cli.py  ui.py
helloapp/: __init__.py  app.py  cli.py
next-version/: ADOPTION_SLICE_A.md  BASELINE_ADAPTER_PLAN.md  BASELINE_MERGE_CHECKLIST.md  BASELINE_SPIKE_BLOCKED_REPORT.md  BASELINE_TO_VNEXT_MAPPING.md  BASELINE_UI_ADOPTION_MAP.md  CANONICAL_WORKFLOW.md  DRY_RUN_MERGE_PATCH_MAP.md  GUI_COCKPIT_PLAN.md  HUMAN_UI_STRATEGY.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_BLUEPRINT.md  LOCAL_RAG_VS_FRONTIER_REASONING.md  MERGE_STRATEGY.md  MINIMAL_BASELINE_DIFF_PLAN.md  NEXT_DECISION.md  NEXT_EXECUTION_RECOMMENDATION.md  NEXT_VERSION_ARCHITECTURE.md  NORTH_STAR_SUMMARY.md  PORTING_NOTES.md  PRE_COMMIT_MILESTONE_CHECK.md  REACT_COCKPIT_ADOPTION_PLAN.md  README.md  REAL_BASELINE_SPIKE_BLOCKED_PATH.md  RISKS_OF_EARLY_MERGE.md  ROLLBACK_AND_ABORT_RULES.md  SCREEN_FLOW_MAP.md  TWIN_API_CONTRACT.md  TWIN_STATE_MODEL.md  UI_BOUNDARY_CONTRACT.md  VERTICAL_SLICE_1.md  VNEXT_FOLDER_PLAN.md
next-version/contracts/: capability-api.md  retrieval-contract.md  sync-contract.md  twin-events.md
next-version/decisions/: ADR-001-canonical-flow.md  ADR-002-single-sync-engine.md  ADR-003-retrieval-before-reasoning.md
next-version/gateway/: .env.example  agent_routes.py  app.py  llm_proxy.py  rag_engine.py  requirements.txt  routes.py  schemas.py
next-version/notes/: CLOUD_SYNC_DESIGN.md  baseline-integration-map.md  baseline-observations.md
next-version/scripts/: launch-dev.ps1
next-version/shared/: package.json
notes/: multimodal-agentic-farm-visit-review.md
risksim/: api.py  cli.py
tests/: test_api.py  test_calculations.py  test_cli.py  test_storage.py  test_ui.py
(+71 files in other folders)
