[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "risksim"
version = "0.1.0"
description = "Risk management calculation tools"
authors = [{ name = "RiskSim" }]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
risksim = "risksim.cli:main"

[project.optional-dependencies]
ui = ["streamlit>=1.0"]
