[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "risksim"
version = "0.1.0"
description = "Risk management calculation tools"
authors = [{ name = "RiskSim" }]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
risksim = "risksim.cli:main"

[project.optional-dependencies]
ui = ["streamlit>=1.0"]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "fastapi",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
