[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "farm-visit-vnext"
version = "0.2.0"
description = "Multimodal Agentic Farm Visit System — vNext (Twin + RAG + LLM gateway)"
authors = [{ name = "Farm Visit" }]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
gateway = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
    "chromadb>=0.4.18",
    "openai>=1.3.0",
    "sentence-transformers>=2.2.2",
]
clip = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "Pillow>=10.0.0",
    "ftfy>=6.1.0",
]
